[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-openenv"
version = "1.0.0"
description = "Customer Support RL Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"

[tool.setuptools.packages.find]
include = ["env*", "baseline*", "server*"]

[project.urls]
"Homepage" = "https://github.com/Aditsharma12/open_env_meta"
